Fixes handlebars table display problems
Code added and refactored to better display tables listing seasons
and players for the current user

Also addresses a minor problem with the Return to Tools button being
misaligned due to being outside of a div class intended to make button
positioning consistent.

--- a/assets/styles/addPlayer.scss
+++ b/assets/styles/addPlayer.scss
@@ -17,7 +17,15 @@
   border-width: 1px;
 }
 
+#player-form-entry {
+  background-color: #659966;
+  max-width: 35%;
+  float: left;
+  margin: auto 10px;
+}
+
 #player-display-target {
+  max-width: 50%;
   float: left;
   margin: 5px 20px;
 }
