--- a/assets/styles/body.scss
+++ b/assets/styles/body.scss
@@ -112,7 +112,7 @@ width: 45%;
   color: #fff
 }
 table {
-  width: 40%;
+  // width: 40%;
    background-color: #659966;
 }
 
