--- a/assets/styles/roster.scss
+++ b/assets/styles/roster.scss
@@ -18,7 +18,7 @@
 
 
 
-#player-form-entry, #player-map, #select-season-target {
+#player-map, #select-season-target {
   float: left;
   margin: auto 10px;
 }
@@ -28,12 +28,6 @@
   margin: 10px 10px;
 }
 
- #player-form-entry {
-   background-color: #659966;
- }
- // #enter-player > input, option {
- //   color: #000;
- // }
 
 #dynamic-field-map {
   float: left;
