--- a/assets/styles/season.scss
+++ b/assets/styles/season.scss
@@ -16,6 +16,9 @@ background-size: contain;
   border-width: 1px;
 }
 
+#enter-panel {
+  max-width: 35%;
+}
 #season-display-target, #enter-season {
 float: left;
 }
